# axon-drop

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
drop/: __init__.py  _core.py  _ctensor.py  _helpers.py  _ops.py  _scalar.py  _tensor.py  _utils.py  base.py  cbase.py  dropy.py  nn.py  ops.py  pbase.py  scalar.py  tensor.py
drop/csrc/: cpu.cpp  cpu.h  cuda.cu  cuda.h  dtype.cpp  dtype.h  main.cpp  scalar.cpp  scalar.h  scalar_cpu.cpp  scalar_cpu.h  scalar_cuda.cu  scalar_cuda.h  tensor.cpp  tensor.h  tensor_cpu.h  value.cpp  value.h
drop/helpers/: ops.py  shape.py
drop/nn/: __init__.py  activations.py  linear.py  module.py  parameter.py
examples/: scalar_mlp.py  scalar_rnn.py
tests/: matmul_test.py  scalar_test.py  tensor_test.py
